<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator_Demo</string>
    <string name="action_settings">Settings</string>
    <string name="del">删除</string>
    <string name="d0">0</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="title_activity_main_acsstivity">MainAcsstivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
